push four collections
